<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="24dp">
    <ImageView
        android:id="@+id/avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:src="@drawable/ic_avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registr"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:orientation="vertical">


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:gravity="center"
        android:hint="@string/email"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="35dp" />
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/confim_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:backgroundTint="@color/palitra_1.4"
            app:cornerRadius="10dp"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/login_activity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center"/>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>